manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adomate
spec:
  replicas: 2
  selector:
    matchLabels:
      run: adomate
  template:
    metadata:
      labels:
        run: adomate
    spec:
      containers:
        - name: adomate
          image: raajpatel229/adomate:latest
          ports:
            - containerPort: 80
          imagePullPolicy: Always
