manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adomate
  labels:
    run: adomate
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    run: adomate
